Spacing fixed between containers on location component.
Div containers are now equally separated.

--- a/src/app/location/location.component.scss
+++ b/src/app/location/location.component.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 $white: #ffffff;
+
 a{
     color: $white;
 }
@@ -13,9 +14,6 @@ a{
     font-size: 30px;
     
 
-}
-.space{
-    padding-top: 150px;
 }
 .container{
 
